force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <description>lculates sales rep commission of 10 percent when opportunity is won.
For Help Text, enter:</description>
    <formula>IF(  ISPICKVAL(StageName, &quot;Closed Won&quot;)  , Amount  * 0.1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales rep commission when opportunity is won.</inlineHelpText>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>