force-app/main/default/objects/Opportunity/fields/Region_Zone__c.field-meta.xml
<CustomField>
    <fullName>Region_Zone__c</fullName>
    <formula>TEXT( Account.Region__c )  &amp;   &quot;/&quot; &amp; TEXT( Account.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region/Zone</label>
    <type>Text</type>
</CustomField>