force-app/main/default/objects/Opportunity/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>Delivery_Schedule_Date__c - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>