force-app/main/default/objects/Opportunity/recordTypes/B2B_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>B2B_Opportunities</fullName>
    <active>true</active>
    <businessProcess>B2B Sales Process</businessProcess>
    <description>Use to log B2B opportunities</description>
    <label>B2B Opportunities</label>
</RecordType>