force-app/main/default/objects/Opportunity/recordTypes/sales_process.recordType-meta.xml
<RecordType>
    <fullName>sales_process</fullName>
    <active>true</active>
    <businessProcess>Retail Sales</businessProcess>
    <label>sales process</label>
</RecordType>