force-app/main/default/objects/Opportunity/validationRules/Close_reason_required_when_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_reason_required_when_lost</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Lost&quot;)   &amp;&amp;  ISBLANK( Close_Reason__c )</errorConditionFormula>
    <errorMessage>You must enter a close reason when opportunity is closed lost.</errorMessage>
</ValidationRule>